--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tscratch",
-  "version": "0.4.9",
+  "version": "0.5.0",
   "description": "A Scratch-style game engine for TypeScript.",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -24,6 +24,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "url": "https://github.com/Sebastian-GOAT/tscratch"
+  },
+  "homepage": "https://tscratch.vercel.app",
   "author": "sebastian-goat",
   "license": "MIT",
   "type": "module",
