Added import aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,6 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
-
     // Environment Settings
-    // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "target": "esnext",
     "types": [],
@@ -42,7 +36,22 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+
+    // Aliases
+    "baseUrl": ".",
+    "paths": {
+      // Server
+      "@server/*": ["src/server/*"],
+      "@server/*.ts": ["src/server/*.ts"],
+      // Client
+      "@main/*": ["src/client/main/*"],
+      "@main/*.ts": ["src/client/main/*.ts"],
+      "@sprites/*": ["src/client/sprites/*"],
+      "@sprites/*.ts": ["src/client/sprites/*.ts"],
+      "@ctypes/*": ["src/client/types/*"],
+      "@ctypes/*.ts": ["src/client/types/*.ts"]
+    }
   },
-  "include": ["src", "tsup.config.ts"],
+  "include": ["src", "tests", "tsup.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
