--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsdom": "^27.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.4"
   },
   "dependencies": {
