--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup",
     "prepublishOnly": "npm run build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "link": "npm run build && npm link"
   },
   "keywords": [
     "typescript",
